--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.2",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "7.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
