fix: tsx import linter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,5 +44,10 @@
     },
     "ecmaFeatures": {
         "globalReturn": true
+    },
+    "settings": {
+        "import/resolver": {
+            "typescript": {}
+        }
     }
 }
