--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.0",
     "bignumber.js": "^9.0.2",
     "mobx": "^6.6.0",
+    "mobx-react": "^7.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "4.0.3",
